Ajout d'articles et recharges automatique des paginations

--- a/frontend/src/App.json
+++ b/frontend/src/App.json
@@ -1,5 +1,5 @@
 {
-    "API_href": "http://localhost/MyShopI",
+    "API_href": "http://localhost/MyShoppApp_Repo/backend",
     "APP_Categories": [
         "Toutes les catégories",
         "Alimentation",
