--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,40 @@
   },
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "axios": "^1.8.3",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query-devtools": "^5.72.2",
+    "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.486.0",
+    "next-themes": "^0.4.6",
+    "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.3.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.1.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/eslint-plugin-query": "^5.72.1",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -35,7 +54,10 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
+  },
+  "overrides": {
+    "css-select": "^4.3.0"
   }
 }
