--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,17 @@
 FROM php:7.4-apache
 
 # Installe les extensions nécessaires à CodeIgniter
-RUN docker-php-ext-install mysqli pdo pdo_mysql && \
-    docker-php-ext-enable mysqli pdo pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql mysqli
 
 # Active mod_rewrite pour les URLs propres
 RUN a2enmod rewrite
+RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
 # Copie tous les fichiers du backend dans le dossier Apache
 COPY . /var/www/html
 
 # Change les droits pour éviter des erreurs de permission
-RUN chown -R www-data:www-data /var/www/html && \
-    chmod -R 755 /var/www/html
+RUN chown -R www-data:www-data /var/www/html
 
 # Configure Apache pour CodeIgniter (si besoin)
 # COPY ./000-default.conf /etc/apache2/sites-available/000-default.conf
@@ -21,5 +20,3 @@ RUN chown -R www-data:www-data /var/www/html && \
 # Expose le port 80 (celui utilisé par Apache)
 EXPOSE 80
 
-# Démarre Apache en foreground
-CMD ["apache2-foreground"]
