--- a/frontend/src/App.json
+++ b/frontend/src/App.json
@@ -1,13 +1,308 @@
 {
     "API_href": "http://localhost/MyShoppApp_Repo/backend",
+    "API_SUPPORTED_FORMATS": [
+        "image/jpg",
+        "image/jpeg",
+        "image/png"
+    ],
     "APP_Categories": [
         "Toutes les catégories",
         "Alimentation",
         "Beauté & Cosmétique",
-        "Décoration &amp; Accéssoire",
+        "Décoration & Accéssoire",
         "Électronique",
         "Enfant & Jouet",
         "Livre",
         "Vêtement"
+    ],
+    "APP_Articles": [
+        {
+            "id_articles": 9,
+            "name": "Samuel N'Guessan",
+            "number": 661626364,
+            "price": 11000,
+            "article": "DD Ram 32go",
+            "quantity": 21,
+            "category": 1,
+            "file_name": "article_ (3).png",
+            "art_visible": 0,
+            "date": "2025-04-24 15:21:59"
+        },
+        {
+            "id_articles": 10,
+            "name": "Lucas",
+            "number": "656789123",
+            "price": 5400,
+            "article": "Carimo",
+            "quantity": 15,
+            "category": 3,
+            "file_name": "article (1).jpg",
+            "art_visible": 0,
+            "date": "2024-11-13 11:05:12"
+        },
+        {
+            "id_articles": 11,
+            "name": "Lucas",
+            "number": "656789123",
+            "price": 250500,
+            "article": "bras robotique 5",
+            "quantity": 565,
+            "category": 4,
+            "file_name": "article (2).jpg",
+            "art_visible": 1,
+            "date": "2025-04-23 23:52:32"
+        },
+        {
+            "id_articles": 12,
+            "name": "Lucas",
+            "number": "656789123",
+            "price": 40500,
+            "article": "Armure Dorée",
+            "quantity": 34,
+            "category": 1,
+            "file_name": "article (3).jpg",
+            "art_visible": 1,
+            "date": "2025-04-27 19:53:03"
+        },
+        {
+            "id_articles": 13,
+            "name": "Lucas",
+            "number": "656789123",
+            "price": 125300,
+            "article": "The Ghost Empire",
+            "quantity": 0,
+            "category": 7,
+            "file_name": "article (4).jpg",
+            "art_visible": 1,
+            "date": "2024-11-11 18:38:00"
+        },
+        {
+            "id_articles": 14,
+            "name": "Ethan",
+            "number": "690845672",
+            "price": 1500,
+            "article": "Pyrhénée",
+            "quantity": 97,
+            "category": 2,
+            "file_name": "article (5).jpg",
+            "art_visible": 0,
+            "date": "2025-04-20 18:13:18"
+        },
+        {
+            "id_articles": 15,
+            "name": "Nora",
+            "number": "655231478",
+            "price": 15500,
+            "article": "T-Shirt Prada",
+            "quantity": 24,
+            "category": 6,
+            "file_name": "article (6).jpg",
+            "art_visible": 0,
+            "date": "2025-02-16 19:41:14"
+        },
+        {
+            "id_articles": 16,
+            "name": "Yanis",
+            "number": "699123456",
+            "price": 18500,
+            "article": "Plat Okok",
+            "quantity": 20,
+            "category": 5,
+            "file_name": "article (7).jpg",
+            "art_visible": 0,
+            "date": "2025-04-20 20:22:21"
+        },
+        {
+            "id_articles": 17,
+            "name": "Lina",
+            "number": "688456123",
+            "price": 10000,
+            "article": "Devnir BG",
+            "quantity": 0,
+            "category": 7,
+            "file_name": "article (8).jpg",
+            "art_visible": 1,
+            "date": "2025-04-27 19:46:05"
+        },
+        {
+            "id_articles": 18,
+            "name": "Ryan",
+            "number": "657912308",
+            "price": 10500,
+            "article": "Jean Prada",
+            "quantity": 0,
+            "category": 6,
+            "file_name": "article (9).jpg",
+            "art_visible": 1,
+            "date": "2025-04-27 19:45:52"
+        },
+        {
+            "id_articles": 19,
+            "name": "Léo",
+            "number": "685102334",
+            "price": 20000,
+            "article": "T shirt Bg",
+            "quantity": 49,
+            "category": 6,
+            "file_name": "article (10).jpg",
+            "art_visible": 1,
+            "date": "2025-04-24 15:19:05"
+        },
+        {
+            "id_articles": 20,
+            "name": "Léo",
+            "number": "685102334",
+            "price": 20000,
+            "article": "T shirt Bg",
+            "quantity": 49,
+            "category": 6,
+            "file_name": "article (11).jpg",
+            "art_visible": 1,
+            "date": "2025-04-24 15:19:05"
+        },
+        {
+            "id_articles": 21,
+            "name": "Léo",
+            "number": "685102334",
+            "price": 20000,
+            "article": "T shirt Bg",
+            "quantity": 49,
+            "category": 6,
+            "file_name": "article (12).jpg",
+            "art_visible": 1,
+            "date": "2025-04-24 15:19:05"
+        },
+        {
+            "id_articles": 22,
+            "name": "Léo",
+            "number": "685102334",
+            "price": 20000,
+            "article": "T shirt Bg",
+            "quantity": 49,
+            "category": 6,
+            "file_name": "article (13).jpg",
+            "art_visible": 1,
+            "date": "2025-04-24 15:19:05"
+        },
+        {
+            "id_articles": 23,
+            "name": "Léo",
+            "number": "685102334",
+            "price": 20000,
+            "article": "T shirt Bg",
+            "quantity": 49,
+            "category": 6,
+            "file_name": "article (14).jpg",
+            "art_visible": 1,
+            "date": "2025-04-24 15:19:05"
+        },
+        {
+            "id_articles": 24,
+            "name": "Aya",
+            "number": "674009812",
+            "price": 11500,
+            "article": "pull H-M",
+            "quantity": 5,
+            "category": 6,
+            "file_name": "article (15).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:34:15"
+        },
+        {
+            "id_articles": 25,
+            "name": "Malik",
+            "number": "678912300",
+            "price": 16000,
+            "article": "Gobelet Cuivre",
+            "quantity": 3,
+            "category": 3,
+            "file_name": "article (16).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:31:42"
+        },
+        {
+            "id_articles": 26,
+            "name": "Emma",
+            "number": "691234785",
+            "price": 16000,
+            "article": "Gobelet Fer",
+            "quantity": 5,
+            "category": 3,
+            "file_name": "article (17).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:30:50"
+        },
+        {
+            "id_articles": 27,
+            "name": "Adam",
+            "number": "667812390",
+            "price": 22500,
+            "article": "Sac Gucci",
+            "quantity": 4,
+            "category": 6,
+            "file_name": "article (18).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:29:48"
+        },
+        {
+            "id_articles": 28,
+            "name": "Sofia",
+            "number": "699876231",
+            "price": 55000,
+            "article": "Sac Gucci Femmes",
+            "quantity": 7,
+            "category": 6,
+            "file_name": "article (19).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:28:27"
+        },
+        {
+            "id_articles": 29,
+            "name": "Hugo",
+            "number": "679451203",
+            "price": 18500,
+            "article": "Ceinture Dior",
+            "quantity": 2,
+            "category": 6,
+            "file_name": "article (20).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:26:36"
+        },
+        {
+            "id_articles": 30,
+            "name": "Ines",
+            "number": "695782134",
+            "price": 40000,
+            "article": "Balle Metal",
+            "quantity": 10,
+            "category": 3,
+            "file_name": "article (21).jpg",
+            "art_visible": 1,
+            "date": "2024-11-15 10:22:40"
+        },
+        {
+            "id_articles": 31,
+            "name": "Ines",
+            "number": "695782134",
+            "price": 40000,
+            "article": "Balle Metal",
+            "quantity": 10,
+            "category": 3,
+            "file_name": "article_ (8).png",
+            "art_visible": 1,
+            "date": "2024-11-15 10:22:40"
+        },
+        {
+            "id_articles": 32,
+            "name": "Ines",
+            "number": "695782134",
+            "price": 40000,
+            "article": "Balle Metal",
+            "quantity": 10,
+            "category": 3,
+            "file_name": "article_ (1).png",
+            "art_visible": 1,
+            "date": "2024-11-15 10:22:40"
+        }
     ]
 }
