--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -1,26 +1,4 @@
-
-Options -indexes
-
-# RewriteEngine on
-# RewriteCond $1 !^(index\.php|images|robots\.txt)
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteCond %{REQUEST_FILENAME} !-l
-# RewriteRule ^(.*)$ index.php/$1 [L]
-
-<IfModule mod_rewrite.c>
-	# Make sure directory listing is disabled
-	Options +FollowSymLinks -Indexes
-	RewriteEngine on
-	# Keep people out of codeigniter directory and Git/Mercurial data
-	RedirectMatch 403 ^/(system\/cache|system\/codeigniter|\.git|\.hg).*$
-	# Send request via index.php (again, not if its a real file or folder)
-	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_FILENAME} !-d
-	<IfModule mod_php5.c>
-            RewriteRule ^(.*)$ index.php/$1 [L]
-	</IfModule>
-	<IfModule !mod_php5.c>
-            RewriteRule ^(.*)$ index.php?/$1 [L]
-	</IfModule>
-</IfModule>
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ index.php [QSA,L]
