--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,7 +12,7 @@ RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 COPY . /var/www/html
 
 # Change les droits pour éviter des erreurs de permission
-RUN chown -R www-data:www-data /var/www/html
+RUN chown -R www-data:www-data /var/www/html && chmod -R 755 /var/www/html
 
 # Configure Apache pour CodeIgniter (si besoin)
 # COPY ./000-default.conf /etc/apache2/sites-available/000-default.conf
